# ChangeLog for app-emacs/uboat
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/uboat/ChangeLog,v 1.9 2007/03/08 09:56:00 opfer Exp $

  08 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50uboat-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  28 Jan 2007; Marius Mauch <genone@gentoo.org> uboat-1.2.ebuild:
  Replacing einfo with elog

  28 Aug 2005; Olivier Crête <tester@gentoo.org> uboat-1.2.ebuild:
  Marked ~amd64, thanks to AT AJ Armstrong <aja@gentoo.org> for testing

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> uboat-1.2.ebuild:
  Stable on ppc.

  25 Apr 2004; David Holm <dholm@gentoo.org> uboat-1.2.ebuild:
  Added to ~ppc.

*uboat-1.2 (31 Oct 2002)

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  uboat-1.2.ebuild, files/50uboat-gentoo.el, 
  files/digest-uboat-1.2 :

  Initial import.